// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadResultsCsvModal with filters and under 20k results matches screenshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="ReactModal__Body--open"
  >
    <div
      data-react-modal-body-trap=""
      style="position: absolute; opacity: 0;"
      tabindex="0"
    />
    <div>
      <div
        class="ReactModal__Overlay ReactModal__Overlay--after-open prime-modal-overlay display-flex flex-align-center flex-justify-center"
      >
        <div
          aria-label="Download test results"
          aria-modal="true"
          class="ReactModal__Content ReactModal__Content--after-open"
          role="dialog"
          style="position: initial; top: 40px; left: 40px; right: 40px; bottom: 40px; border: 1px solid #ccc; background: rgb(255, 255, 255); overflow: auto; border-radius: 4px; outline: none; padding: 20px; max-height: 90vh; width: 40em;"
          tabindex="-1"
        >
          <div
            class="border-0 card-container"
          >
            <div
              class="display-flex flex-justify"
            >
              <h1
                class="font-heading-lg margin-top-05 margin-bottom-0"
              >
                Download test results
              </h1>
              <button
                aria-label="Close"
                class="close-button"
              >
                <span
                  class="fa-layers"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle fa-w-16 fa-inverse fa-2x "
                    data-icon="circle"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                      fill="currentColor"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-times-circle fa-w-16 fa-2x "
                    data-icon="times-circle"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="border-top border-base-lighter margin-x-neg-205 margin-top-205"
            />
            <div
              class="grid-row grid-gap"
            >
              <p>
                Download results with current search filters applied?
              </p>
            </div>
            <div
              class="grid-row grid-gap"
            >
              <p>
                The CSV file will include 
                15
                 row
                s
                .
              </p>
            </div>
            <div
              class="border-top border-base-lighter margin-x-neg-205 margin-top-2 padding-top-205 text-right"
            >
              <div
                class="display-flex flex-justify-end"
              >
                <button
                  class="usa-button usa-button--unstyled margin-right-2"
                  type="button"
                >
                  No, go back
                </button>
                <button
                  aria-disabled="false"
                  class="usa-button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-download fa-w-16 margin-right-1"
                    data-icon="download"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                      fill="currentColor"
                    />
                  </svg>
                  Download results
                </button>
                <a
                  class="hidden"
                  download="simplereport-test-results.csv"
                  href="data:text/csv;charset=utf-8,﻿"
                  target="_self"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-react-modal-body-trap=""
      style="position: absolute; opacity: 0;"
      tabindex="0"
    />
    <div
      class="ReactModalPortal"
    />
  </body>,
  "container": <div>
    <div
      class="ReactModal__Overlay ReactModal__Overlay--after-open prime-modal-overlay display-flex flex-align-center flex-justify-center"
    >
      <div
        aria-label="Download test results"
        aria-modal="true"
        class="ReactModal__Content ReactModal__Content--after-open"
        role="dialog"
        style="position: initial; top: 40px; left: 40px; right: 40px; bottom: 40px; border: 1px solid #ccc; background: rgb(255, 255, 255); overflow: auto; border-radius: 4px; outline: none; padding: 20px; max-height: 90vh; width: 40em;"
        tabindex="-1"
      >
        <div
          class="border-0 card-container"
        >
          <div
            class="display-flex flex-justify"
          >
            <h1
              class="font-heading-lg margin-top-05 margin-bottom-0"
            >
              Download test results
            </h1>
            <button
              aria-label="Close"
              class="close-button"
            >
              <span
                class="fa-layers"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-circle fa-w-16 fa-inverse fa-2x "
                  data-icon="circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-times-circle fa-w-16 fa-2x "
                  data-icon="times-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="border-top border-base-lighter margin-x-neg-205 margin-top-205"
          />
          <div
            class="grid-row grid-gap"
          >
            <p>
              Download results with current search filters applied?
            </p>
          </div>
          <div
            class="grid-row grid-gap"
          >
            <p>
              The CSV file will include 
              15
               row
              s
              .
            </p>
          </div>
          <div
            class="border-top border-base-lighter margin-x-neg-205 margin-top-2 padding-top-205 text-right"
          >
            <div
              class="display-flex flex-justify-end"
            >
              <button
                class="usa-button usa-button--unstyled margin-right-2"
                type="button"
              >
                No, go back
              </button>
              <button
                aria-disabled="false"
                class="usa-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-download fa-w-16 margin-right-1"
                  data-icon="download"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                    fill="currentColor"
                  />
                </svg>
                Download results
              </button>
              <a
                class="hidden"
                download="simplereport-test-results.csv"
                href="data:text/csv;charset=utf-8,﻿"
                target="_self"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DownloadResultsCsvModal with no filters and under 20k results matches screenshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="ReactModal__Body--open"
  >
    <div
      data-react-modal-body-trap=""
      style="position: absolute; opacity: 0;"
      tabindex="0"
    />
    <div>
      <div
        class="ReactModal__Overlay ReactModal__Overlay--after-open prime-modal-overlay display-flex flex-align-center flex-justify-center"
      >
        <div
          aria-label="Download test results"
          aria-modal="true"
          class="ReactModal__Content ReactModal__Content--after-open"
          role="dialog"
          style="position: initial; top: 40px; left: 40px; right: 40px; bottom: 40px; border: 1px solid #ccc; background: rgb(255, 255, 255); overflow: auto; border-radius: 4px; outline: none; padding: 20px; max-height: 90vh; width: 40em;"
          tabindex="-1"
        >
          <div
            class="border-0 card-container"
          >
            <div
              class="display-flex flex-justify"
            >
              <h1
                class="font-heading-lg margin-top-05 margin-bottom-0"
              >
                Download test results
              </h1>
              <button
                aria-label="Close"
                class="close-button"
              >
                <span
                  class="fa-layers"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle fa-w-16 fa-inverse fa-2x "
                    data-icon="circle"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                      fill="currentColor"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-times-circle fa-w-16 fa-2x "
                    data-icon="times-circle"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="border-top border-base-lighter margin-x-neg-205 margin-top-205"
            />
            <div
              class="grid-row grid-gap"
            >
              <p>
                Download results without any search filters applied?
              </p>
            </div>
            <div
              class="grid-row grid-gap"
            >
              <p>
                The CSV file will include 
                1
                 row
                
                .
              </p>
            </div>
            <div
              class="border-top border-base-lighter margin-x-neg-205 margin-top-2 padding-top-205 text-right"
            >
              <div
                class="display-flex flex-justify-end"
              >
                <button
                  class="usa-button usa-button--unstyled margin-right-2"
                  type="button"
                >
                  No, go back
                </button>
                <button
                  aria-disabled="false"
                  class="usa-button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-download fa-w-16 margin-right-1"
                    data-icon="download"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                      fill="currentColor"
                    />
                  </svg>
                  Download results
                </button>
                <a
                  class="hidden"
                  download="simplereport-test-results.csv"
                  href="data:text/csv;charset=utf-8,﻿"
                  target="_self"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-react-modal-body-trap=""
      style="position: absolute; opacity: 0;"
      tabindex="0"
    />
    <div
      class="ReactModalPortal"
    />
  </body>,
  "container": <div>
    <div
      class="ReactModal__Overlay ReactModal__Overlay--after-open prime-modal-overlay display-flex flex-align-center flex-justify-center"
    >
      <div
        aria-label="Download test results"
        aria-modal="true"
        class="ReactModal__Content ReactModal__Content--after-open"
        role="dialog"
        style="position: initial; top: 40px; left: 40px; right: 40px; bottom: 40px; border: 1px solid #ccc; background: rgb(255, 255, 255); overflow: auto; border-radius: 4px; outline: none; padding: 20px; max-height: 90vh; width: 40em;"
        tabindex="-1"
      >
        <div
          class="border-0 card-container"
        >
          <div
            class="display-flex flex-justify"
          >
            <h1
              class="font-heading-lg margin-top-05 margin-bottom-0"
            >
              Download test results
            </h1>
            <button
              aria-label="Close"
              class="close-button"
            >
              <span
                class="fa-layers"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-circle fa-w-16 fa-inverse fa-2x "
                  data-icon="circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-times-circle fa-w-16 fa-2x "
                  data-icon="times-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="border-top border-base-lighter margin-x-neg-205 margin-top-205"
          />
          <div
            class="grid-row grid-gap"
          >
            <p>
              Download results without any search filters applied?
            </p>
          </div>
          <div
            class="grid-row grid-gap"
          >
            <p>
              The CSV file will include 
              1
               row
              
              .
            </p>
          </div>
          <div
            class="border-top border-base-lighter margin-x-neg-205 margin-top-2 padding-top-205 text-right"
          >
            <div
              class="display-flex flex-justify-end"
            >
              <button
                class="usa-button usa-button--unstyled margin-right-2"
                type="button"
              >
                No, go back
              </button>
              <button
                aria-disabled="false"
                class="usa-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-download fa-w-16 margin-right-1"
                  data-icon="download"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                    fill="currentColor"
                  />
                </svg>
                Download results
              </button>
              <a
                class="hidden"
                download="simplereport-test-results.csv"
                href="data:text/csv;charset=utf-8,﻿"
                target="_self"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DownloadResultsCsvModal with over 20k results matches screenshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="ReactModal__Body--open"
  >
    <div
      data-react-modal-body-trap=""
      style="position: absolute; opacity: 0;"
      tabindex="0"
    />
    <div>
      <div
        class="ReactModal__Overlay ReactModal__Overlay--after-open prime-modal-overlay display-flex flex-align-center flex-justify-center"
      >
        <div
          aria-label="Download test results"
          aria-modal="true"
          class="ReactModal__Content ReactModal__Content--after-open"
          role="dialog"
          style="position: initial; top: 40px; left: 40px; right: 40px; bottom: 40px; border: 1px solid #ccc; background: rgb(255, 255, 255); overflow: auto; border-radius: 4px; outline: none; padding: 20px; max-height: 90vh; width: 40em;"
          tabindex="-1"
        >
          <div
            class="border-0 card-container"
          >
            <div
              class="display-flex flex-justify"
            >
              <h1
                class="font-heading-lg margin-top-05 margin-bottom-0"
              >
                Too many results selected
              </h1>
              <button
                aria-label="Close"
                class="close-button"
              >
                <span
                  class="fa-layers"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle fa-w-16 fa-inverse fa-2x "
                    data-icon="circle"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                      fill="currentColor"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-times-circle fa-w-16 fa-2x "
                    data-icon="times-circle"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="border-top border-base-lighter margin-x-neg-205 margin-top-205"
            />
            <div
              class="grid-row grid-gap"
            >
              <p>
                Please filter test results and download again with 20,000 results or fewer.
              </p>
            </div>
            <div
              class="border-top border-base-lighter margin-x-neg-205 margin-top-2 padding-top-205 text-right"
            >
              <div
                class="display-flex flex-justify-end"
              >
                <button
                  class="usa-button usa-button--unstyled margin-right-2"
                  type="button"
                >
                  Go back
                </button>
                <button
                  aria-disabled="true"
                  class="usa-button usa-button-disabled"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-download fa-w-16 margin-right-1"
                    data-icon="download"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                      fill="currentColor"
                    />
                  </svg>
                  Download results
                </button>
                <a
                  class="hidden"
                  download="simplereport-test-results.csv"
                  href="data:text/csv;charset=utf-8,﻿"
                  target="_self"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-react-modal-body-trap=""
      style="position: absolute; opacity: 0;"
      tabindex="0"
    />
    <div
      class="ReactModalPortal"
    />
  </body>,
  "container": <div>
    <div
      class="ReactModal__Overlay ReactModal__Overlay--after-open prime-modal-overlay display-flex flex-align-center flex-justify-center"
    >
      <div
        aria-label="Download test results"
        aria-modal="true"
        class="ReactModal__Content ReactModal__Content--after-open"
        role="dialog"
        style="position: initial; top: 40px; left: 40px; right: 40px; bottom: 40px; border: 1px solid #ccc; background: rgb(255, 255, 255); overflow: auto; border-radius: 4px; outline: none; padding: 20px; max-height: 90vh; width: 40em;"
        tabindex="-1"
      >
        <div
          class="border-0 card-container"
        >
          <div
            class="display-flex flex-justify"
          >
            <h1
              class="font-heading-lg margin-top-05 margin-bottom-0"
            >
              Too many results selected
            </h1>
            <button
              aria-label="Close"
              class="close-button"
            >
              <span
                class="fa-layers"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-circle fa-w-16 fa-inverse fa-2x "
                  data-icon="circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-times-circle fa-w-16 fa-2x "
                  data-icon="times-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="border-top border-base-lighter margin-x-neg-205 margin-top-205"
          />
          <div
            class="grid-row grid-gap"
          >
            <p>
              Please filter test results and download again with 20,000 results or fewer.
            </p>
          </div>
          <div
            class="border-top border-base-lighter margin-x-neg-205 margin-top-2 padding-top-205 text-right"
          >
            <div
              class="display-flex flex-justify-end"
            >
              <button
                class="usa-button usa-button--unstyled margin-right-2"
                type="button"
              >
                Go back
              </button>
              <button
                aria-disabled="true"
                class="usa-button usa-button-disabled"
                disabled=""
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-download fa-w-16 margin-right-1"
                  data-icon="download"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                    fill="currentColor"
                  />
                </svg>
                Download results
              </button>
              <a
                class="hidden"
                download="simplereport-test-results.csv"
                href="data:text/csv;charset=utf-8,﻿"
                target="_self"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
